"""
Python client for Go gRPC risk engine
"""

import grpc
from decimal import Decimal
from typing import Dict, List, Optional

# Note: After generating proto files, import them here
# from go.proto import risk_pb2, risk_pb2_grpc


class RiskEngineClient:
    """Client for interacting with Go risk engine via gRPC"""
    
    def __init__(self, host: str = 'localhost', port: int = 50051):
        self.channel = grpc.insecure_channel(f'{host}:{port}')
        # self.stub = risk_pb2_grpc.RiskEngineStub(self.channel)
        
    def check_position(
        self, 
        symbol: str, 
        quantity: Decimal, 
        price: Decimal, 
        side: str
    ) -> Dict[str, any]:
        """
        Check if a position is within risk limits
        
        Args:
            symbol: Stock symbol
            quantity: Order quantity
            price: Order price
            side: "BUY" or "SELL"
            
        Returns:
            Dict with 'approved' (bool) and 'message' (str)
        """
        # request = risk_pb2.PositionRequest(
        #     symbol=symbol,
        #     quantity=str(quantity),
        #     price=str(price),
        #     side=side
        # )
        # response = self.stub.CheckPosition(request)
        # return {
        #     'approved': response.approved,
        #     'message': response.message
        # }
        
        # Placeholder until proto is generated
        return {'approved': True, 'message': 'Risk check passed'}
    
    def get_metrics(self) -> Dict[str, any]:
        """
        Get current risk metrics
        
        Returns:
            Dict with risk metrics
        """
        # request = risk_pb2.MetricsRequest()
        # response = self.stub.GetMetrics(request)
        # return {
        #     'total_exposure': Decimal(response.total_exposure),
        #     'total_pnl': Decimal(response.total_pnl),
        #     'daily_pnl': Decimal(response.daily_pnl),
        #     'leverage': Decimal(response.leverage),
        #     'var_95': Decimal(response.var_95),
        #     'sharpe': response.sharpe,
        #     'volatility': response.volatility,
        #     'position_count': response.position_count,
        #     'limit_breaches': list(response.limit_breaches)
        # }
        
        # Placeholder
        return {
            'total_exposure': Decimal('0'),
            'position_count': 0,
            'limit_breaches': []
        }
    
    def close(self):
        """Close the gRPC channel"""
        self.channel.close()


# Example usage
if __name__ == '__main__':
    client = RiskEngineClient()
    
    # Check position
    result = client.check_position(
        symbol='AAPL',
        quantity=Decimal('100'),
        price=Decimal('150.50'),
        side='BUY'
    )
    print(f"Position check: {result}")
    
    # Get metrics
    metrics = client.get_metrics()
    print(f"Risk metrics: {metrics}")
    
    client.close()
